--- a/src/pricing.html
+++ b/src/pricing.html
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pricing - SiteStruck</title>
-  <link rel="icon" href="logo.png" type="image/png" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="logo.png" type="image/png"/><link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-
 <header class="main-header">
-  <div class="header-left">
-    <img class="logo" src="logo.png" alt="Logo">
-    <div class="site-name">SiteStruck</div>
-  </div>
+  <div class="header-left"><img class="logo" src="logo.png" alt="Logo"><div class="site-name">SiteStruck</div></div>
   <nav class="navbar">
-    <a href="index.html">Home</a>
-    <a href="pricing.html">Pricing</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
+    <a href="index.html">Home</a><a href="pricing.html">Pricing</a><a href="generator.html">Generator</a>
+    <a href="mypages.html">My Pages</a><a href="about.html">About</a><a href="contact.html">Contact</a>
     <a id="auth-link" href="login.html" class="btn" style="padding:8px 14px">Login</a>
   </nav>
 </header>
 
-<main>
- <section class="pricing-section">
-    <h2>Our Plans</h2>
-    <div class="plan">
-        <h3>Basic</h3>
-        <p>$10</p>
-        <button class="buy-btn" data-plan="Basic">Buy Basic</button>
-    </div>
-    <div class="plan">
-        <h3>Pro</h3>
-        <p>$20</p>
-        <button class="buy-btn" data-plan="Pro">Buy Pro</button>
-    </div>
-    <div class="plan">
-        <h3>Premium</h3>
-        <p>$50</p>
-        <button class="buy-btn" data-plan="Premium">Buy Premium</button>
-    </div>
-</section>
-
+<main class="container section pricing">
+  <div class="card">
+    <h3>Basic</h3>
+    <p class="price">$10 / mo</p>
+    <ul><li>1 page</li><li>Email support</li><li>Starter components</li></ul>
+    <button class="btn buy-btn" data-plan="Basic">Buy Basic</button>
+  </div>
+  <div class="card">
+    <h3>Pro</h3>
+    <p class="price">$20 / mo</p>
+    <ul><li>Up to 5 pages</li><li>Priority support</li><li>Pro components</li></ul>
+    <button class="btn buy-btn" data-plan="Pro">Buy Pro</button>
+  </div>
+  <div class="card">
+    <h3>Premium</h3>
+    <p class="price">$50 / mo</p>
+    <ul><li>Unlimited pages</li><li>Premium support</li><li>All components</li></ul>
+    <button class="btn buy-btn" data-plan="Premium">Buy Premium</button>
+  </div>
 </main>
 
 <footer><p>&copy; 2025 SiteStruck. All rights reserved.</p></footer>
 <script src="auth.js"></script>
+<script>
+  document.addEventListener("DOMContentLoaded", ()=>{
+    const buyBtns = document.querySelectorAll(".buy-btn");
+    buyBtns.forEach(btn=>{
+      btn.addEventListener("click", ()=>{
+        const plan = btn.dataset.plan;
+        window.handlePurchase(plan);
+      });
+    });
+  });
+</script>
 </body>
 </html>
-
-
