--- a/src/register.html
+++ b/src/register.html
@@ -1,54 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Register - SiteStruck</title>
-  <link rel="icon" href="logo.png" type="image/png" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="logo.png" type="image/png"/><link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-
 <header class="main-header">
-  <div class="header-left">
-    <img class="logo" src="logo.png" alt="Logo">
-    <div class="site-name">SiteStruck</div>
-  </div>
+  <div class="header-left"><img class="logo" src="logo.png" alt="Logo"><div class="site-name">SiteStruck</div></div>
   <nav class="navbar">
-    <a href="index.html">Home</a>
-    <a href="pricing.html">Pricing</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
+    <a href="index.html">Home</a><a href="pricing.html">Pricing</a><a href="generator.html">Generator</a>
+    <a href="mypages.html">My Pages</a><a href="about.html">About</a><a href="contact.html">Contact</a>
     <a id="auth-link" href="login.html" class="btn" style="padding:8px 14px">Login</a>
   </nav>
 </header>
 
-<main>
-  <section class="section">
-    <div class="container">
-      <h2 class="center">Create your account</h2>
-      <div class="form-card">
-        <form id="register-form">
-          <div class="form-row">
-            <label for="reg-email">Email</label>
-            <input id="reg-email" type="email" placeholder="you@example.com" required>
-          </div>
-          <div class="form-row">
-            <label for="reg-password">Password</label>
-            <input id="reg-password" type="password" placeholder="••••••••" required>
-          </div>
-          <div class="form-row">
-            <label for="reg-confirm">Confirm password</label>
-            <input id="reg-confirm" type="password" placeholder="••••••••" required>
-          </div>
-          <div class="form-actions">
-            <button class="btn" type="submit">Create account</button>
-            <a class="btn secondary" href="login.html">I have an account</a>
-          </div>
-        </form>
-      </div>
-    </div>
-  </section>
+<main class="container section">
+  <div class="form-card">
+    <h2 class="center">Create account</h2>
+    <form id="register-form">
+      <div class="form-row"><label>Email</label><input id="reg-email" type="email" required></div>
+      <div class="form-row"><label>Password</label><input id="reg-password" type="password" required></div>
+      <div class="form-row"><label>Confirm password</label><input id="reg-confirm" type="password" required></div>
+      <div class="form-actions"><button class="btn" type="submit">Register</button></div>
+    </form>
+    <p class="center mt-18">Have an account? <a href="login.html">Login</a></p>
+  </div>
 </main>
 
 <footer><p>&copy; 2025 SiteStruck. All rights reserved.</p></footer>
