--- a/src/generator.html
+++ b/src/generator.html
@@ -1,60 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Generator - SiteStruck</title>
-  <link rel="icon" href="logo.png" type="image/png"/><link rel="stylesheet" href="style.css"/>
+  <link rel="icon" href="logo.png" type="image/png"/>
+  <link rel="stylesheet" href="style.css"/>
+  <!-- JSZip for ZIP download -->
   <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
 </head>
 <body>
 <header class="main-header">
-  <div class="header-left"><img class="logo" src="logo.png" alt="Logo"><div class="site-name">SiteStruck</div></div>
+  <div class="header-left">
+    <img class="logo" src="logo.png" alt="Logo">
+    <div class="site-name">SiteStruck</div>
+  </div>
   <nav class="navbar">
-    <a href="index.html">Home</a><a href="pricing.html">Pricing</a><a href="generator.html">Generator</a>
-    <a href="mypages.html">My Pages</a><a href="about.html">About</a><a href="contact.html">Contact</a>
-    <a id="auth-link" href="login.html" class="btn" style="padding:8px 14px">Login</a>
+    <a href="index.html">Home</a>
+    <a href="pricing.html">Pricing</a>
+    <a href="generator.html" class="active auth-protected">Generator</a>
+    <a href="mypages.html" class="auth-protected">My Pages</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+    <a id="auth-link" href="login.html" class="btn small">Login</a>
   </nav>
 </header>
 
-<main class="container section">
-  <h2 class="center">Generate a site for your purchase</h2>
+<main class="container">
+  <section class="section">
+    <h1>Website Generator</h1>
+    <p class="muted">You can have only <strong>one active site</strong> per account. Delete your current site in <em>My Pages</em> to create a new one.</p>
 
-  <div class="form-card">
-    <form id="generator-form">
-      <div class="form-row">
-        <label for="owned-site">Select your site</label>
-        <select id="owned-site" required></select>
-      </div>
-      <div class="form-row">
-        <label for="site-name">Site name</label>
-        <input type="text" id="site-name" placeholder="My Amazing Site" required>
-      </div>
-      <div class="form-row">
-        <label for="main-color">Main color</label>
-        <input type="color" id="main-color" value="#4caf50">
-      </div>
-      <div class="form-row">
-        <label for="font-family">Font</label>
-        <select id="font-family">
-          <option>Arial</option><option>Verdana</option><option>Tahoma</option><option>Georgia</option><option>Times New Roman</option>
-        </select>
-      </div>
-      <div class="form-row">
-        <label>Sections</label>
-        <div>
-          <label class="inline"><input type="checkbox" name="sections" value="About" checked> About</label>&nbsp;&nbsp;
-          <label class="inline"><input type="checkbox" name="sections" value="Contact" checked> Contact</label>&nbsp;&nbsp;
-          <label class="inline"><input type="checkbox" name="sections" value="Blog"> Blog</label>
+    <div id="no-purchase" class="form-card hidden">
+      <p>You need to buy a plan first.</p>
+      <a class="btn" href="pricing.html">Buy a plan</a>
+    </div>
+
+    <div id="has-site" class="form-card hidden">
+      <p>You already have an active generated site. Manage it in <a href="mypages.html">My Pages</a>.</p>
+      <a class="btn" href="mypages.html">Go to My Pages</a>
+    </div>
+
+    <div id="generator-wrap" class="form-card hidden">
+      <form id="generator-form">
+        <div class="form-row">
+          <label for="site-name">Site name</label>
+          <input id="site-name" type="text" placeholder="My Awesome Site" required>
         </div>
-      </div>
-      <div class="form-actions">
-        <button class="btn" type="submit">Generate & Download ZIP</button>
-      </div>
-    </form>
-  </div>
 
-  <div id="preview" class="generator-preview hidden"></div>
-  <div id="result" class="center mt-24"></div>
+        <div class="form-row">
+          <label for="main-color">Main color</label>
+          <input id="main-color" type="color" value="#4caf50">
+        </div>
+
+        <div class="form-row">
+          <label for="font-family">Font family</label>
+          <select id="font-family">
+            <option value="Arial">Arial</option>
+            <option value="Inter">Inter</option>
+            <option value="Roboto">Roboto</option>
+            <option value="Georgia">Georgia</option>
+            <option value="Poppins">Poppins</option>
+          </select>
+        </div>
+
+        <div class="form-row">
+          <label>Sections</label>
+          <div class="checkboxes">
+            <label><input type="checkbox" name="sections" value="About" checked> About</label>
+            <label><input type="checkbox" name="sections" value="Contact" checked> Contact</label>
+            <label><input type="checkbox" name="sections" value="Blog"> Blog</label>
+          </div>
+        </div>
+
+        <div class="form-actions">
+          <button class="btn" type="submit">Generate & Download ZIP</button>
+        </div>
+      </form>
+
+      <div id="result" class="mt-24"></div>
+    </div>
+  </section>
 </main>
 
 <footer><p>&copy; 2025 SiteStruck. All rights reserved.</p></footer>
@@ -62,4 +88,3 @@
 <script src="generator.js"></script>
 </body>
 </html>
-
